[package]
authors = ["mcarton <cartonmartin+git@gmail.com>"]
description = "The Big List of Naughty Strings is a list of strings which have a high probability of causing issues when used as user-input data."
keywords = ["blns", "naughty-strings", "test"]
license = "MIT"
name = "naughty-strings"
repository = "https://github.com/mcarton/rust-naughty-strings"
version = "0.1.0"

[[bin]]
name = "make-lib"
path = "src/bin/make-lib.rs"

[dependencies]
rustc-serialize = "0.3"
